--- a/src/App.css
+++ b/src/App.css
@@ -7,10 +7,17 @@ body{
 .list-body{
     background-color: #bbdfc8;
     display: inline-block;
-    padding: 80px;
+    padding: 2rem 5rem 5rem 5rem;
     border-radius: 5px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+.title {
+    font-size: 2rem;
+    color: dimgrey;
+    text-align: center;
+    margin-bottom: 3rem;
 }
