--- a/src/components/TodoListItem/style.css
+++ b/src/components/TodoListItem/style.css
@@ -1,8 +1,23 @@
-.complete {
+.todo-complete {
     text-decoration: line-through;
 }
 
 .todo-item {
+    width: 40rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #f0e5d8;
+    margin-bottom: 0.5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
+.todo-text{
+    font-size: 1.5rem;
+    margin: 0.8rem;
+    color: dimgrey;
 
 }
 
