--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,24 @@
 body{
-    background-color: #75cfb8;
+    background-color: #e4f9f5;
     min-width: 100%;
     min-height: 100%;
 }
 
 .list-body{
-    background-color: #bbdfc8;
-    display: inline-block;
+    max-width: 60%;
+    background-color: #30e3ca;
     padding: 2rem 5rem 5rem 5rem;
     border-radius: 5px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    border: 3px #11999e solid;
 }
 
 .title {
     font-size: 2rem;
-    color: dimgrey;
+    color: #40514e;
     text-align: center;
     margin-bottom: 3rem;
 }
