--- a/src/components/TodoListItem/style.css
+++ b/src/components/TodoListItem/style.css
@@ -1,14 +1,21 @@
-.todo-complete {
+.todo-text-complete {
     text-decoration: line-through;
 }
 
+.todo-item-complete {
+    transform: scale(0.98);
+    filter: invert(15%);
+}
+
 .todo-item {
+    max-width: 100%;
+    transition: transform .2s;
     width: 40rem;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    background-color: #f0e5d8;
+    background-color: #e4f9f5;
     margin-bottom: 0.5rem;
     padding-left: 1rem;
     padding-right: 1rem;
@@ -17,7 +24,7 @@
 .todo-text{
     font-size: 1.5rem;
     margin: 0.8rem;
-    color: dimgrey;
+    color: #40514e;
 
 }
 
@@ -36,7 +43,7 @@
 }
 
 .button-check{
-    background-color: green;
+    background-color: #11999e;
 }
 
 .button-check:active{
