--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,22 @@
+#root{
+    width: 100%;
+}
+
 body{
     background-color: #e4f9f5;
-    min-width: 100%;
-    min-height: 100%;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 .list-body{
-    max-width: 60%;
     background-color: #30e3ca;
+    width: 40rem;
     padding: 2rem 5rem 5rem 5rem;
     border-radius: 5px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    box-sizing: border-box;
+    margin: 5rem auto;
     border: 3px #11999e solid;
 }
 
@@ -21,4 +25,12 @@ body{
     color: #40514e;
     text-align: center;
     margin-bottom: 3rem;
+}
+
+@media only screen and (max-width: 700px) {
+    .list-body{
+        width: 95%;
+        padding: 1rem;
+        margin: 1rem auto;
+    }
 }
