--- a/src/components/TodoListItem/style.css
+++ b/src/components/TodoListItem/style.css
@@ -8,9 +8,8 @@
 }
 
 .todo-item {
-    max-width: 100%;
+    width: 100%;
     transition: transform .2s;
-    width: 40rem;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -19,6 +18,7 @@
     margin-bottom: 0.5rem;
     padding-left: 1rem;
     padding-right: 1rem;
+    box-sizing: border-box;
 }
 
 .todo-text{
