Updated styles for buttons

--- a/src/components/AddTodoForm/style.css
+++ b/src/components/AddTodoForm/style.css
@@ -9,14 +9,19 @@
 
 .add-button{
     border: none;
+    outline: none;
     color: dimgrey;
     background-color: #11999e;
     font-size: 1rem;
     padding: 1.1rem;
 }
 
+.add-button:active{
+    background: darkgreen;
+}
+
 .text-input{
-    min-width: 85%;
+    min-width: 80%;
     background-color: #e4f9f5;
     border: none;
     padding: 1rem 1rem;
